--- a/static/css/main.css
+++ b/static/css/main.css
@@ -322,6 +322,45 @@ ul.sublist {
     display: inline-table;
     vertical-align: middle;
 }
+
+.wechat {
+    display: none;
+    position: fixed;
+    bottom: 75px;
+    right: 15px;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    line-height: 55px;
+    background-color: #333;
+    text-align: center;
+    color: #fff;
+    border: 1px solid #fff;
+    z-index: 9;
+}
+
+.wechat i {
+    color: #fff;
+    font-size: 28px;
+}
+
+.wechat-hover{
+
+}
+
+.wechat-alert{
+    display: none;
+    position: fixed;
+    bottom: 13px;
+    right: 75px;
+    cursor: pointer;
+    width: 110px;
+    height: 110px;
+    text-align: center;
+    color: #fff;
+    border: 0px solid #fff;
+    z-index: 9;
+}
 .scroll-top {
     position: fixed;
     bottom: 15px;
@@ -490,7 +529,7 @@ a:hover>span.site-name{
 }
 .slider-description-inner {
     margin-left: 0%;
-    background: rgba(11, 11, 11, 0.75);
+    background: rgba(11, 11, 11, 0.55);
 }
 .slider-description-inner h1 {
     font-family: 'azedobold';
@@ -1294,7 +1333,7 @@ ul.sub-menu li a {
 .show-menu .menu-list ul li {
     transition-duration: 0.9s;
     text-decoration: none;
-    line-height: 42px;
+    line-height: 50px;
 }
 .show-menu .content::before {
     opacity: 1;
