--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -85,7 +85,7 @@
 	}
 
 	.slider-description{
-		top: 10%;
+		top: 45px;
 	}
 	.slider-description-inner h1 span {
 	    padding: 10px;
@@ -118,7 +118,7 @@
 	}
 
 	.history-wrapper article {
-		margin-top: 130px;
+		margin-top: 100px;
 	}
 
 	.cd-headline {
@@ -129,11 +129,17 @@
 		letter-spacing: 3pt;
 	}
 
-    .myClass{
-        height: 95px;
+    .myFooter01{
+        height: 75px;
     }
+	.myFooter02{
+		height: 105px;
+	}
+	.myFooter03{
+		height: 95px;
+	}
     .myPadding{
-        padding-bottom: 125px;
+        padding-bottom: 135px;
     }
     h4{
         padding-bottom: 0px;
@@ -256,7 +262,7 @@
 	}
 
 	.margin-top {
-	    margin-top: 100px;
+	    margin-top: 45px;
 	}
 
 	.img{
