更新首页关键字查询

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>即刻简历</title>
-    <meta name="description" content="">
+    <meta name="keywords" charset="在线简历,网页简历,个性简历,即刻简历,炫酷网页简历,html5">
+    <meta name="description" content="'即刻简历'旨在网络便捷时代提供更多个性化、更能表达自我才能的无纸化简历制作。简历作为众多求职者职业生涯中不可或缺的一部分,求职过程中除却求职者本身的能力之外,一份有创意及个性的简历亦能展现求职者对这份工作的用心和重视程度,在'即刻'所有简历均为免费制作,当然您也可以选择更加展现自我的个性化定制制作,执笔之间,难掩才华。">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
 
