更新首页样式

--- a/views/index.html
+++ b/views/index.html
@@ -241,7 +241,7 @@
                         <i class="fa fa-clock-o fa-2x" aria-hidden="true"></i>
                         {{/*<hr>*/}}
                     </div>
-                    <h4>即刻便利</h4>
+                    <h4>即时便利</h4>
                     <p>操作简单便利,您只需选中自己中意风格并填入相关信息即可在线预览,无需下载保存,可任意时间在线查看</p>
                 </div>
                 <div class="col-md-4">
