后台管理更改

--- a/views/index.html
+++ b/views/index.html
@@ -203,7 +203,7 @@
                     <article>
                         <h1>关于我们</h1>
                         <hr>
-                        <h4 style="font-family: '微软雅黑'">'即刻简历'旨在网络便捷时代提供更多个性化、更能表达自我才能的无纸化简历制作。简历作为众多求职者职业生涯中不可或缺的一部分,求职过程中除却求职者本身的能力之外,一份有创意及个性的简历亦能展现求职者对这份工作的用心和重视程度,在'即刻'所有简历均为免费制作,当然您也可以选择更加展现自我的个性化定制制作,执笔之间,难掩才华。</h4>
+                        <h4 style="font-family: '微软雅黑'">'即刻简历'旨在网络便捷时代提供更多个性化、更能表达自我才能的无纸化简历制作。简历作为众多求职者职业生涯中不可或缺的一部分,求职过程中除却求职者本身的能力之外,一份有创意及个性的简历亦能展现求职者对这份工作的用心和重视程度,在'即刻'所有简历均为免费制作,当然您也可以选择更加展现自我的个性化定制服务,执笔之间,难掩才华。</h4>
                         <p>
                         <br/>The Instant Resume is designed to provide more personalized and more self-fulfilling paperless resumes in the era of network convenience.As a part of the job search career, the resume is an indispensable part of the job search process. In addition to the job seeker's own ability, a creative and personalized resume can also show the job seeker's intention and attention to the job.All of our resumes are free to make, of course, you can also choose to show your own personalized custom production, between the writing, it is difficult to hide talent.</p>
                     </article>
